--- a/react_frontend/src/components/Home.css
+++ b/react_frontend/src/components/Home.css
@@ -11,11 +11,11 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
   background-color: #222;
   border: 3px solid #444;
-  padding: 20px;
+  padding: 15px;
   box-shadow: 0 0 15px rgba(255, 0, 0, 0.2);
   position: relative;
   overflow: hidden;
@@ -93,37 +93,9 @@ h1 {
   flex-grow: 1;
 }
 
-.tournament-logo {
-  width: 50px;
-  height: 50px;
-  margin-right: 10px;
-}
-
-.tournament-select, .sort-button {
-  padding: 10px 20px;
-  background-color: #ff3333;
-  color: #1a1a1a;
-  border: none;
-  cursor: pointer;
-  font-family: 'Special Elite', cursive;
-  font-size: 16px;
-  text-transform: uppercase;
-  transition: all 0.3s ease;
-  box-shadow: 3px 3px 0px #ddd;
-}
-
-.tournament-select {
-  flex-grow: 1;
-  margin-right: 10px;
-}
-
-.predictions-table .team-name {
-    text-transform: uppercase;
-}
-
 .tournament-logo-container {
-  width: 60px; /* Adjust size as needed */
-  height: 60px; /* Adjust size as needed */
+  width: 50px; /* Adjust size as needed */
+  height: 50px; /* Adjust size as needed */
   background-color: #DDDDDD;
   display: flex;
   justify-content: center;
@@ -145,6 +117,24 @@ h1 {
   transform: translate(-50%, -50%);
 }
 
+.tournament-select, .sort-button {
+  padding: 10px 20px;
+  background-color: #ff3333;
+  color: #1a1a1a;
+  border: none;
+  cursor: pointer;
+  font-family: 'Special Elite', cursive;
+  font-size: 16px;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+  box-shadow: 3px 3px 0px #ddd;
+}
+
+.tournament-select {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
 .sort-button:hover, .tournament-select:hover {
   background-color: #ddd;
   color: #ff3333;
@@ -160,16 +150,21 @@ h1 {
   width: 100%;
   border-collapse: separate;
   border-spacing: 2px;
-  font-size: 14px;
+  font-size: 12px;
   background-color: #2a2a2a;
 }
-
+.predictions-table th:hover {
+    background-color: #4a4a4a;
+}
+.predictions-table tr:nth-child(even) {
+    background-color: #2f2f2f;
+}
 .predictions-table th,
 .predictions-table td {
-  padding: 10px;
+  padding: 8px;
   text-align: center;
   border: 1px solid #444;
-  white-space: nowrap;  /* Prevent text from wrapping */
+  white-space: nowrap;
 }
 
 .predictions-table th {
@@ -179,21 +174,57 @@ h1 {
   text-transform: uppercase;
 }
 
+.predictions-table td, .predictions-table th {
+    transition: all 0.3s ease;
+}
+.predictions-table td:hover, .predictions-table th:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 10px rgba(255, 51, 51, 0.5);
+}
+
+.predictions-table .pending-prediction {
+  color: #ffff33;
+  text-shadow: 0 0 5px rgba(255, 255, 51, 0.5);
+}
+
 .predictions-table .future-match {
   font-style: italic;
   color: #999;
 }
 
 .predictions-table .correct-prediction {
+  color: #2bbd2b;
+  /*font-weight: bold;*/
+  text-shadow: 0 0 5px rgba(51, 255, 51, 0.5);
+}
+
+.predictions-table .diff-prediction {
+  color: #32d932;
+  font-weight: bold;
+  text-shadow: 0 0 5px rgba(51, 255, 51, 0.5);
+}
+
+.predictions-table .exact-prediction {
   color: #33ff33;
+  font-weight: bold;
+  font-size: 13px;
+  text-shadow: 0 0 5px rgba(51, 255, 51, 0.5);
 }
 
 .predictions-table .incorrect-prediction {
   color: #ff3333;
+  text-shadow: 0 0 5px rgba(255, 51, 51, 0.5);
 }
 
 .predictions-table .no-bet {
   color: #888;
+  font-style: italic;
+}
+
+.predictions-table .points {
+    font-weight: bold;
+    background-color: #3a3a3a;
+    color: #ddd;
 }
 
 .predictions-table .leader-column {
@@ -201,8 +232,46 @@ h1 {
 }
 
 .total-points td {
+  background-color: #444;
+  color: #ff3333;
+  text-shadow: 0 0 5px rgba(255, 51, 51, 0.5);
   font-weight: bold;
-  background-color: #3a3a3a;
+  font-size: 14px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.total-points:hover {
+    background-color: #555;
+}
+
+.tournament-select-container {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+}
+.current-match {
+    background-color: #444 !important;
+    animation: pulse 2s infinite;
+}
+@keyframes pulse {
+    0% { box-shadow: 0 0 0 0px rgba(255, 51, 51, 0.7); }
+    100% { box-shadow: 0 0 0 5px rgba(255, 51, 51, 0); }
+}
+.current-match td {
+    background-color: #444 !important;
+}
+
+
+.predictions-table th:nth-child(1)::before {
+    content: "🕒  ";
+}
+
+.predictions-table th:nth-child(2)::before {
+    content: "⚽  ";
+}
+
+.predictions-table th:nth-child(3)::before {
+    content: "🏆  ";
 }
 
 @keyframes flicker {
@@ -247,17 +316,24 @@ h1 {
     flex-direction: column;
   }
 
+  .tournament-logo-container {
+    display: none; /* Hide logo on mobile */
+  }
+
   .tournament-select-container {
     margin-bottom: 10px;
     width: 100%;
   }
 
+  .tournament-select {
+    width: 100%; /* Make the tournament select full-width */
+  }
+
   .sort-button {
-    width: 100%;
+    width: 100%; /* Make the sort button full-width */
   }
 
   .predictions-table-container {
-    overflow-x: auto;
     margin-top: 10px;
   }
 
