--- a/react_frontend/src/components/Home.css
+++ b/react_frontend/src/components/Home.css
@@ -11,12 +11,12 @@ body {
 }
 
 .container {
-  max-width: 1400px;
+  max-width: 1440px;
   margin: 0 auto;
   background-color: #222;
   border: 3px solid #444;
   padding: 15px;
-  box-shadow: 0 0 15px rgba(255, 0, 0, 0.2);
+  box-shadow: 0 0 25px rgba(255, 0, 0, 0.2);
   position: relative;
   overflow: hidden;
 }
@@ -38,7 +38,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
-  border-bottom: 2px solid #444;
+  /*border-bottom: 2px solid #444;*/
 }
 
 h1 {
@@ -51,7 +51,7 @@ h1 {
 }
 
 .account-button {
-  padding: 10px 20px;
+  padding: 8px 15px;
   background-color: #ff3333;
   color: #1a1a1a;
   text-decoration: none;
@@ -85,6 +85,7 @@ h1 {
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
+  gap: 10px;
 }
 
 .tournament-select-container {
@@ -94,8 +95,8 @@ h1 {
 }
 
 .tournament-logo-container {
-  width: 50px; /* Adjust size as needed */
-  height: 50px; /* Adjust size as needed */
+  width: 50px;
+  height: 50px;
   background-color: #DDDDDD;
   display: flex;
   justify-content: center;
@@ -105,6 +106,8 @@ h1 {
   overflow: hidden;
   margin-right: 10px;
   position: relative;
+  flex-shrink: 0;
+  vertical-align: middle;
 }
 
 .tournament-logo {
@@ -114,10 +117,18 @@ h1 {
   position: absolute;
   top: 50%;
   left: 50%;
+  max-width: 100%;
+  max-height: 100%;
   transform: translate(-50%, -50%);
 }
 
+.tournament-select {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
 .tournament-select, .sort-button {
+  margin-top: 20px;
   padding: 10px 20px;
   background-color: #ff3333;
   color: #1a1a1a;
@@ -128,18 +139,38 @@ h1 {
   text-transform: uppercase;
   transition: all 0.3s ease;
   box-shadow: 3px 3px 0px #ddd;
+  flex-shrink: 0;
+  width: auto;
+  white-space: nowrap;
+}
+
+.sort-button, .tournament-select {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #ff3333;
+    color: #1a1a1a;
+    cursor: pointer;
+    font-family: 'Special Elite', cursive;
+    font-size: 16px;
+    border: 2px solid #ddd;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 0px #ddd;
+}
+.sort-button:hover, .tournament-select:hover {
+    background-color: #ddd;
+    color: #ff3333;
+    box-shadow: 5px 5px 0px #ff3333;
 }
 
 .tournament-select {
-  flex-grow: 1;
-  margin-right: 10px;
+    flex-grow: 1;
+    background-color: #ff3333;
+    border: 2px solid #ddd;
+    color: #1a1a1a;
+    margin-right: 10px;
 }
 
-.sort-button:hover, .tournament-select:hover {
-  background-color: #ddd;
-  color: #ff3333;
-  box-shadow: 5px 5px 0px #ff3333;
-}
 
 .predictions-table-container {
   overflow-x: auto;
@@ -150,7 +181,7 @@ h1 {
   width: 100%;
   border-collapse: separate;
   border-spacing: 2px;
-  font-size: 12px;
+  font-size: 13px;
   background-color: #2a2a2a;
 }
 .predictions-table th:hover {
@@ -244,11 +275,11 @@ h1 {
     background-color: #555;
 }
 
-.tournament-select-container {
-    display: flex;
-    align-items: center;
-    flex-grow: 1;
-}
+/*.tournament-select-container {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    flex-grow: 1;*/
+/*}*/
 .current-match {
     background-color: #444 !important;
     animation: pulse 2s infinite;
@@ -314,6 +345,7 @@ h1 {
 
   .controls {
     flex-direction: column;
+    align-items: stretch;
   }
 
   .tournament-logo-container {
