--- a/react_frontend/src/components/Account.css
+++ b/react_frontend/src/components/Account.css
@@ -342,10 +342,22 @@ h1, h2, h3 {
   text-align: center;
 }
 
-.tournament-name {
+
+.score-inputs {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.score-inputs input[type="number"] {
+  width: 60px;
+  text-align: center;
+}
+
+.score-separator {
+  margin: 0 10px;
+  font-size: 20px;
   font-weight: bold;
-    font-size: 1.05rem;
-  margin-bottom: 0.5rem;
 }
 
 .winner-badge {
@@ -410,14 +422,16 @@ h1, h2, h3 {
   background-color: #2a2a2a;
     margin-top: 0.5rem;
   /*border-radius: 8px;*/
-  padding: 1rem;
+  padding: 0.3rem;
   margin-bottom: 0.5rem;
   display: flex;
   align-items: center;
 }
 
 .achievement-icon {
-  font-size: 2rem;
+    margin-top: 0.55rem;
+  font-size: 2.5rem;
+    margin-left: 0.75rem;
   margin-right: 1rem;
 }
 
@@ -426,16 +440,16 @@ h1, h2, h3 {
 }
 
 .achievement-tournament {
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   font-weight: bold;
     text-transform: uppercase;
   color: #ff3333;
     text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  margin-bottom: 0.3rem;
+  margin-bottom: 0.1rem;
 }
 
 .achievement-place {
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: #33ff33;
     text-shadow: 0 0 5px rgba(51, 255, 51, 0.5);
 }
